# archie

./: .gitignore  Dockerfile  ENV_DESIGN_DOCUMENT.md  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_all_tasks.py
core/: __init__.py  arch_library.py  dataset_library.py  layer_modifier.py  models.py  task_graders.py  template_model.py  trainer.py
docs/: Hackthon_requirement.md
server/: app.py  neural_arch_environment.py
